Bugfix for collapsed menu.

--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -85,7 +85,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
 }
 
-
 .tile {
     width: 100%;
 	display: inline-block;
@@ -163,13 +162,4 @@ h1, h2, h3, h4, h5, h6 {
             }
         }
     }
-    /*
-    .col-xs-6:first-child {
-        padding-right:10px;
-    }
-    .col-xs-6:last-child {
-        padding-left:10px;
-    }*/
-
-
 }
